<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_verticalGap="32sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="32dp"
        app:flow_verticalGap="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCalculadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculadora"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btViagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viagem"
            android:textSize="32sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>